# A-Maze-ING

./: .gitignore  Makefile  README.md  a_maze_ing.py  config_default.txt  maze_validator.py  mazegen.py  pyproject.toml  requirements.txt
src/: __init__.py  app.py  model.py
src/render/: ascii_renderer.py  palette.py
