[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "0.1.0"
description = "Reusable maze generator module for the A-Maze-ing project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pedro Henrique Dinis Lellis" },
  { name = "Vinicius Zani Stortti" }
]
license = { text = "MIT" }
keywords = ["maze", "generator", "42", "procedural"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["mazegen"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".mypy_cache", ".pytest_cache", "__pycache__", "build", "dist"]
